# resp_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
respmcp/: __init__.py  core.py  server.py
respmcp/providers/: __init__.py  acl.py  arxiv.py  base.py  conferences.py  connected_papers.py  crossref.py  dblp.py  openalex.py  openreview.py  semantic_scholar.py  venues.py
tests/: test_conferences.py  test_live.py
