[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "resp-mcp"
version = "0.1.0"
description = "SERP-free scholarly paper search — library + MCP server for research agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "monk1337" }]
keywords = ["research", "papers", "arxiv", "semantic-scholar", "mcp", "scholarly"]

dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
resp-mcp = "respmcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["respmcp*"]
